@@ -14,6 +14,8 @@
 	* support variable number of optimistic unchoke slots and to dynamically
 	  adjust based on the total number of unchoke slots
 	* support for BitTyrant choker algorithm
+	* support for automatically start torrents when they receive an
+	  incoming connection
 
 0.15 release
 
